<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/touchLinear"
    android:background="@drawable/background"
    >





    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/aiTextGetter"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>



    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:visibility="gone"
        />


    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:progress="50"
        android:visibility="gone"
        />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="CHOOSE OPTIONS"
      android:textAlignment="center"
      android:textSize="30dp"
      android:textColor="#000"
      android:gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">


        <RelativeLayout
            android:id="@+id/btn_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/chip_icon">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/vv"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_ussd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/chip_icon">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/ussd"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

<!--tamil
... வாக்களிக்கும் விருப்பங்கள் ... யு.எஸ்.எஸ்.டி, குரல் வாக்களிப்பு மற்றும் சாதாரண வாக்களிப்பு.

hindi
... वोटिंग विकल्प हैं ... यूएसएसडी, वॉयस वोटिंग और नॉर्मल वोटिंग।

malayalam
... വോട്ടിംഗ് ഓപ്ഷനുകൾ ഇവയാണ് ... യു‌എസ്‌എസ്ഡി, വോയ്‌സ് വോട്ടിംഗ്, സാധാരണ വോട്ടിംഗ്.

gujarati
... મતદાન વિકલ્પો આ છે ... યુએસએસડી, અવાજ મતદાન અને સામાન્ય મતદાન.

bengali
... ভোটের বিকল্পগুলি হ'ল ... ইউএসএসডি, ভয়েস ভোটদান এবং সাধারণ ভোটদান।

marathi
... मतदानाचे पर्याय आहेत ... यूएसएसडी, व्हॉईस मतदान आणि सामान्य मतदान.

telugu
... ఓటింగ్ ఎంపికలు ... యుఎస్ఎస్డి, వాయిస్ ఓటింగ్ మరియు సాధారణ ఓటింగ్.
-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">


        <RelativeLayout
            android:id="@+id/btn_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/chip_icon">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/mv"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/touchOption"/>



    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/list"/>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>







</LinearLayout>