<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@color/colorAccent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtSigninPhoneFloatingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="35dp"

            tools:ignore="MissingClass">

            <EditText
                android:id="@+id/edtSigninPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:maxLength="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="#FB8C00"
                android:textSize="15sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtSigninOTPFloatingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="2dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSigninOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                android:hint="OTP"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="#FB8C00"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                android:gravity="end" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnsendotpPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:onClick="signinPhone"
                android:padding="10dp"
                android:text="@string/send_otp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSigninPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:onClick="signinPhone"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnresendotpPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:onClick="signinPhone"
                android:padding="10dp"
                android:text="@string/resend_otp"
                android:textSize="15sp"
                android:visibility="gone"/>


        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/needhelpinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Need help?"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>